# pdk-ci-workflow

./: .gitignore  .pre-commit-hooks.yaml  .pre-commit-hooks.yml  CLAUDE.md  README.md  pdks.yml  pyproject.toml
.github/: CODEOWNERS  README.md  dependabot.yml  release-drafter.yml
.github/workflows/: README.md  build-wheels.yml  claude-pr-review.yml  downstream-dispatch.yml  downstream-test.yml  drc.yml  issue.yml  model_coverage.yml  model_regression.yml  pages.yml  push-compliance.yml  release-changelog.yml  release-drafter.yml  release.yml  test-sample-projects.yml  test_code.yml  test_coverage.yml  test_cspdk.yml  test_hhi.yml  test_hooks.yml  update_badges.yml
actions/: README.md
hooks/: README.md  __init__.py  _utils.py  check_cells_structure.py  check_makefile_targets.py  check_multi_band.py  check_no_main_in_cells.py  check_no_raw_layers.py  check_package_init.py  check_pdk_object.py  check_precommit_config.py  check_pyproject_sections.py  check_required_files.py  check_requires_pytz.py  check_tech_structure.py  check_template_drift.py  check_test_structure.py  check_version_sync.py  check_workflows.py
scripts/: README.md  build_cell.py  push_compliance.py
templates/: .pre-commit-config.yaml  README.md  __init__.py  build_cell.py
templates/.github/: dependabot.yml
templates/.github/workflows/: build-wheels.yml  claude-pr-review.yml  pages.yml  release-changelog.yml  release-devpi.yml  release-drafter.yml  release-pypi.yml  sample-projects.yml  test_code.yml
tests/: conftest.py  test_check_cells_structure.py  test_check_multi_band.py  test_check_pyproject_sections.py  test_check_template_drift.py
